--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Generador de numeros aleatorios</h1>
+    <h1>Generador de Numeros Aleatorios</h1>
+
     
     <div class="controls">
         <label for="min">Minimo:</label>
